# MouseV1

./: .gitignore  NeuronTransfer.py  README.md  SpatialConnectMatrix.py  Todo.md  WilsonCowanModel.py  experimental_data.py  geometry.py  input.py  main.py  pyproject.toml  simulation.py  test.md  test.py
ccmodels/: ConnectMatrix.py
src/analysis/: Louvain.py  OSI.py  distance.py
src/tests/: __init__.py  test_WilsonCowanModel.py  test_geometry.py  test_input.py  test_neuronTransfer.py  test_orientation.py  test_spatialConnectMatrix.py
src/v1model/: NeuronTransfer.py  SpatialConnectMatrix.py  WilsonCowanModel.py  default_config.py  experimental_data.py  geometry.py  input.py
